--- a/crates/iv-core/Cargo.toml
+++ b/crates/iv-core/Cargo.toml
@@ -6,3 +6,14 @@ license.workspace = true
 authors.workspace = true
 
 [dependencies]
+iv-net = { path = "../iv-net/" }
+bevy = "0.16.1"
+
+quinn = "0.11.8"
+bincode = "2.0"
+tokio = { version = "1.47.1", features = ["full"] }
+serde = { version = "1.0", features = ["derive"] }
+bytes = "1.10.1"
+
+rapier3d = { version = "0.28.0", features = ["simd-stable"] }
+bevy_rapier3d = "0.28.0"
