--- a/crates/iv-server/Cargo.toml
+++ b/crates/iv-server/Cargo.toml
@@ -13,3 +13,11 @@ opt-level = 3
 strip = "debuginfo"
 
 [dependencies]
+iv-core = { path="../iv-core" }
+iv-net = { path="../iv-net" }
+
+quinn = "0.11.8"
+
+bevy = "0.16.1"
+
+bincode = "2.0"
